- Interpolation is now automatically handled by framework
- Added MonoGame runtime for consoles
- Added task executor API to use platform-specific thread implementations
- Added (optional) object pooling for geometry classes
- Added new GamePad API with improved controller/feature support (third-party controllers, rumble, player index, etc.)
- Simplified geometry class hierarchy

[1.9.10]
- Update to latest RoboVM to support iOS 12
- Fixed clipping not working when rendering shapes

[1.9.9]
- Fixed TSX paths not being normalised

[1.9.8]
- Added ActionListenerAdapter, HoverListenerAdapter, and UiInputSourceListenerAdapter

[1.9.7]
- Added overridable onMouseMoved, onMouseDown, onMouseUp events to CustomUiElement

[1.9.6]
- Fixed crash when Tiled object templates have no properties

[1.9.5]
- Added UiContainer setting to passthrough mouse movements to subsequent input handlers
- Fixed duplicate Y value correction on flipped Tiled object templates that reference tiles

[1.9.4]
- Fixed for ArrayOutOfBoundsException in GridUiNavigation (thanks Dan Allen)
- Fixed .intersects() incorrectly returning true for rotated rectangles (thanks Stephen Kelly-Hannon)

[1.9.3]
- Fixed crash on Android when playing sounds (thanks Dan Allen)
- Fixed entities being scheduled for interpolate/render after being removed during update
- BasicGame now implements GameResizeListener

[1.9.2]
- (#86) Fix cast exception when minimizing desktop-based games

[1.9.1]
- Fix hexagonal Tiled map rendering when tile sizes do not match hex side length

[1.9.0]
- Update to LibGDX 1.9.8
- [BREAKING] UiContainer can now select a NavigationMode instead of only enabling/disabling keyboard
- [BREAKING] Font loading split into BitmapFont and MonospaceFont
- [BREAKING] Game no longer pauses when changing to/from foreground/background. Game now pauses when minimised/restored. Toggle these settings via DesktopMini2DxConfig.
- Added SpriteSheet class